--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   image_picker: ^0.8.7+3
+  firebase_auth: ^4.4.2
+  cloud_firestore: ^4.5.2
+  firebase_storage: ^11.1.1
+  firebase_core: ^2.10.0
 
 dev_dependencies:
   flutter_test:
