--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   staggered_grid_view_flutter: ^0.0.4
   flutter_swiper_null_safety: ^1.0.2
   font_awesome_flutter: ^10.4.0
+  provider: ^6.0.5
+  badges: ^3.1.1
 
 dev_dependencies:
   flutter_test:
