--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   provider: ^6.0.5
   badges: ^3.1.1
+  sn_progress_dialog: ^1.1.3
 
 dev_dependencies:
   flutter_test:
