--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   badges: ^3.1.1
   sn_progress_dialog: ^1.1.3
   flutter_datetime_picker: ^1.5.1
+  intl: ^0.18.1
+  collection: ^1.17.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
