--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path: ^1.8.2
   flutter_rating_bar: ^4.0.1
   expandable: ^5.0.1
+  country_state_city_picker: ^1.2.8
 
 dev_dependencies:
   flutter_test:
