--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   expandable: ^5.0.1
   country_state_city_picker: ^1.2.8
+  flutter_pw_validator: ^1.5.0
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
